<resources>
    <string name="app_name">ArticleSaver</string>
    <string name="test">Test</string>
    <string name="new_article">New Article</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="saved_links">Saved Links</string>
    <string name="title_activity_saved_links">SavedLinks</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="links_saved_here">Links Saved Here</string>
    <string name="back">Back</string>
    <string name="saved_articles_here">Saved Articles</string>
    <string name="excalibur"><a href="https://en.wikipedia.org/wiki/Excalibur">Excalibur</a></string>
    <string name="new_category">New Category</string>

</resources>